<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="hello">Hello World, SFCPDAActivity!</string>
    <string name="app_name">SFC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="msg_default_status">将二维码放入框内，即可自动扫描</string>
	<string name="confirm">确定</string>
	<string name="pick">取件</string>
	<string name="haspick">已取</string>
	<string name="unpick">未取</string>
	<string name="all">全部</string>
	<string name="search">搜索</string>
	<string name="takeover">收货</string>
	<string name="pickdetail">取件详情</string>
	<string name="log">日志</string>
	<string name="commit">提交</string>
	<string name="setAgain">重置</string>
	<string name="back">返回</string>
	<string name="type">类型</string>
	<string name="weight">重量</string>
	<string name="clientID">客户ID</string>
	<string name="totalnum">总件数</string>
	<string name="clientName">联系人</string>
	<string name="clientPhone">联系电话</string>
	<string name="pickAddress">取件地址</string>
	<string name="exceptPickTime">期望取货时间</string>
	<string name="clientManager">客户经理</string>
	<string name="scanpickup">扫描收货</string>
	<string name="inputIdLog">请输入客户ID</string>
	<string name="inputIdLog2">请输入客户ID/锁带编号</string>
	<string name="pickdate">取件日期</string>
	<string name="LockbeltNum">锁带编号</string>
	<string name="weightunit">(kg)</string>
    

</resources>