<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
   <LinearLayout 
       android:layout_width="match_parent"
       android:layout_height="30dp"
       android:orientation="horizontal"
       android:gravity="center_vertical"
       android:background="@color/title_bg"
       >

       <TextView
           android:id="@+id/tv_head_title1"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:gravity="center"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/title_text"
           android:text="@string/clientID" />
       
		<View android:layout_width="0.5dp"
   			  android:layout_height="wrap_content"
   			  android:background="@color/halfTransparent"
   			  android:visibility="gone"/>
		
       <TextView
           android:id="@+id/tv_head_title2"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:gravity="center"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/title_text"
           android:text="@string/clientName" />
       
		<View android:layout_width="0.5dp"
    		  android:layout_height="wrap_content"
   			  android:background="@color/halfTransparent"
   			  android:visibility="gone"/>
		
       <TextView
           android:id="@+id/tv_head_title3"
             android:layout_width="0dp"
           android:layout_weight="1"
           android:gravity="center"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:textColor="@color/title_text"
           android:text="@string/exceptPickTime" />
		
   </LinearLayout> 
		<View android:layout_width="match_parent"
   			  android:layout_height="0.5dp"
   			  android:background="@color/halfTransparent"/>
</LinearLayout>
